--- a/.gitignore
+++ b/.gitignore
@@ -211,5 +211,6 @@ dmypy.json
 
 # End of https://www.gitignore.io/api/pycharm,python
 
-/data/output/
+/data/logs/*
+/data/output/*
 mask_rcnn_coco.h5
