--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,56 @@
-imgaug
-matplotlib
-pycocotools
-mrcnn
 absl-py==0.7.1
 astor==0.7.1
+backcall==0.1.0
 certifi==2019.3.9
+colorama==0.4.1
+cycler==0.10.0
+Cython==0.29.7
+decorator==4.4.0
 gast==0.2.2
 grpcio==1.16.1
 h5py==2.9.0
+imageio==2.5.0
+imgaug==0.2.9
+ipython==7.5.0
+ipython-genutils==0.2.0
+jedi==0.13.3
+Keras==2.2.4
 Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.9
+kiwisolver==1.1.0
 Markdown==3.1
+mask-rcnn==2.1
+matplotlib==3.0.3
 mkl-fft==1.0.12
 mkl-random==1.0.2
 mock==2.0.0
+networkx==2.3
 numpy==1.16.3
+opencv-python==4.1.0.25
+parso==0.4.0
 pbr==5.1.3
+pickleshare==0.7.5
+Pillow==6.0.0
+prompt-toolkit==2.0.9
 protobuf==3.7.1
+pycocotools==2.0
+Pygments==2.4.0
+pyparsing==2.4.0
 pyreadline==2.1
+python-dateutil==2.8.0
+PyWavelets==1.0.3
+PyYAML==5.1
 read-roi==1.5.1
+scikit-image==0.15.0
 scipy==1.2.1
+Shapely==1.6.4.post1
 six==1.12.0
 tensorboard==1.13.1
 tensorflow==1.13.1
 tensorflow-estimator==1.13.0
 termcolor==1.1.0
+-e git+https://github.com/chrisfilippis/tooth_damage_detection.git@821e8ecefe59d5f92db12c43b3fbe987758d8fba#egg=tooth_datamage
+traitlets==4.3.2
+wcwidth==0.1.7
 Werkzeug==0.15.2
 wincertstore==0.2
