fix: deployment fixes

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,6 @@ Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.9
 kiwisolver==1.1.0
 Markdown==3.1
-mask-rcnn==2.1
 matplotlib==3.0.3
 mkl-fft==1.0.12
 mkl-random==1.0.2
@@ -49,7 +48,7 @@ tensorboard==1.13.1
 tensorflow==1.13.1
 tensorflow-estimator==1.13.0
 termcolor==1.1.0
--e git+https://github.com/chrisfilippis/tooth_damage_detection.git@821e8ecefe59d5f92db12c43b3fbe987758d8fba#egg=tooth_datamage
+-e git+https://github.com/matterport/Mask_RCNN#egg=mrcnn
 traitlets==4.3.2
 wcwidth==0.1.7
 Werkzeug==0.15.2
