--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ read-roi==1.5.1
 scikit-image==0.15.0
 scipy==1.2.1
 Shapely==1.6.4.post1
+sklearn==0.20.4
 six==1.12.0
 tensorboard==1.13.1
 tensorflow-gpu==1.13.1
